Mon May  9 20:57:13 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_{complex,rational}.rb: added tests.

Mon May  9 20:29:44 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (string_to_c_internal): a refactoring.

Mon May  9 18:33:05 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c: Improve documentation for String#start_with? and
	  String#end_with?. fixes #4652
	  patched by Andrew Grimm <andrew.j.grimm at gmail.com>

Mon May  9 13:49:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* complex.c (string_to_c_internal): support scientific notation.
	  patched by Tinco Andringa. https://github.com/ruby/ruby/pull/16
	  [ruby-core:36046][Bug #4655]

Mon May  9 11:52:48 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* numeric.c (int_ord): remove K&R style.
	  patched by Daehyub Kim. https://github.com/ruby/ruby/pull/17

Sun May  8 22:17:24 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_{complex2,complexrational}.rb: use skip.
	* test/date/*.rb: ditto.

Sun May  8 21:02:31 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_{complex2,complexrational}.rb: NEVER SKIP.

Sun May  8 21:01:21 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_date_base.rb: fixed.

Sun May  8 20:54:11 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/*.rb: NEVER SKIP.

Sun May  8 20:37:33 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/*.rb: reverted 31432.

Sun May  8 20:32:43 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/*.rb: reverted 31483.

Sun May  8 19:39:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_cond_timedwait): add to care EINTR.
	* thread_pthread.c (thread_timer): remove EINTR check.

Sun May  8 19:04:15 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/time.rb (xmlschema): avoid passing any negative numbers.

Sun May  8 18:40:03 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{parse,strptime}.c: introduced some macros.
